[gd_scene load_steps=9 format=3 uid="uid://cqsrr3av777g2"]

[ext_resource type="Texture2D" uid="uid://dsqobsgau7v00" path="res://graphics/player/player.png" id="1_dovo2"]
[ext_resource type="Script" uid="uid://clwj5v0sn6u24" path="res://scenes/player/player.gd" id="1_gmlin"]
[ext_resource type="Texture2D" uid="uid://n2ar0f7efjot" path="res://graphics/decals/white.png" id="3_gmlin"]

[sub_resource type="CircleShape2D" id="CircleShape2D_dovo2"]
radius = 56.0357

[sub_resource type="Gradient" id="Gradient_gmlin"]
offsets = PackedFloat32Array(0, 0.983607)
colors = PackedColorArray(0.423529, 1, 1, 0.345098, 0.537255, 1, 1, 0.733333)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_lvxji"]
gradient = SubResource("Gradient_gmlin")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_lvxji"]
particle_flag_disable_z = true
spread = 15.0
initial_velocity_min = 1200.0
initial_velocity_max = 1500.0
gravity = Vector3(0, 0, 0)
scale_min = 0.3
scale_max = 0.8
color = Color(0.611765, 0.94902, 1, 0.67451)
color_ramp = SubResource("GradientTexture1D_lvxji")

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_gmlin"]
polygon = PackedVector2Array(-45, 23, -62, 22, -71, 15, -71, 10, -72, 6, -75, 1, -78, -4, -82, -6, -85, -11, -87, -16, -86, -20, -86, -23, -91, -24, -92, -27, -94, -33, -96, -38, -96, -42, -95, -46, -95, -49, -94, -52, -94, -57, -93, -61, -92, -64, -90, -67, -89, -67, -89, -69, -88, -73, -87, -75, -84, -79, -82, -83, -79, -85, -73, -87, -68, -86, -66, -85, -64, -83, -62, -84, -61, -87, -62, -89, -59, -91, -53, -93, -49, -95, -46, -95, -46, -93, -43, -94, -35, -97, -29, -98, -23, -97, -23, -96, -19, -96, -14, -99, -11, -99, -10, -97, -7, -95, -4, -92, -2, -90, -1, -88, 2, -84, 5, -82, 9, -80, 11, -74, 12, -69, 14, -68, 16, -67, 21, -66, 24, -64, 27, -61, 30, -58, 35, -54, 40, -51, 41, -49, 43, -48, 47, -47, 50, -48, 54, -47, 60, -45, 62, -43, 65, -41, 71, -40, 76, -39, 77, -35, 83, -34, 88, -35, 89, -34, 89, -32, 88, -30, 88, -29, 93, -29, 94, -31, 98, -29, 99, -24, 99, -19, 99, -14, 98, -10, 96, -5, 93, -4, 89, -5, 88, -7, 86, -7, 84, -3, 87, 0, 84, 1, 79, -1, 76, -3, 72, -3, 72, -1, 69, 3, 65, 5, 62, 6, 61, 10, 60, 12, 60, 13, 58, 14, 54, 17, 49, 16, 41, 15, 36, 16, 30, 16, 25, 16, 24, 12, 24, 10, 25, 8, 27, 6, 22, 6, 19, 5, 12, 4, 8, 5, 4, 7, -3, 8, -5, 9, -10, 10, -14, 12, -20, 15, -22, 17, -33, 21, -35, 22, -41, 22)

[node name="Player" type="CharacterBody2D" groups=["player"]]
collision_mask = 31
script = ExtResource("1_gmlin")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(-39, -36)
shape = SubResource("CircleShape2D_dovo2")

[node name="PlayerImage" type="Sprite2D" parent="."]
position = Vector2(2, -37)
rotation = 1.5708
texture = ExtResource("1_dovo2")

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
autostart = true

[node name="GrenadeTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LaserStartPositions" type="Node2D" parent="."]
position = Vector2(73, 46)

[node name="Marker2D" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(24, -65)

[node name="Marker2D2" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(20, -52)

[node name="Marker2D3" type="Marker2D" parent="LaserStartPositions"]
position = Vector2(21, -74)

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
position = Vector2(97, -19)
emitting = false
texture = ExtResource("3_gmlin")
lifetime = 0.1
one_shot = true
process_material = SubResource("ParticleProcessMaterial_lvxji")

[node name="LightOccluder2D" type="LightOccluder2D" parent="."]
occluder = SubResource("OccluderPolygon2D_gmlin")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="GrenadeTimer" to="." method="_on_grenade_timer_timeout"]
